--- a/bsconfig.json
+++ b/bsconfig.json
@@ -1,18 +1,20 @@
 {
   "name": "re-media-devices",
   "version": "0.1.0",
-  "sources": {
-    "dir" : "src",
-    "subdirs" : true
-  },
+  "sources": [
+    {
+      "dir" : "src",
+      "subdirs" : true
+    },
+    {
+      "dir": "example"
+    }
+  ],
   "package-specs": {
     "module": "commonjs",
     "in-source": true
   },
   "suffix": ".bs.js",
-  "bs-dependencies": [
-
-  ],
   "warnings": {
     "error" : "+101"
   },
