--- a/bsconfig.json
+++ b/bsconfig.json
@@ -18,6 +18,9 @@
   "warnings": {
     "error" : "+101"
   },
+  "bs-dependencies": [
+    "reason-promise"
+  ],
   "namespace": true,
   "refmt": 3
 }
